force-app/main/default/objects/Account/fields/Renewal_Status__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Status__c</fullName>
    <formula>If(ISBLANK(Min_Open_Renewal_Date__c),&quot;No Open Renewal&quot;, 
If(Min_Open_Renewal_Date__c&lt; TODAY(), &quot;Late&quot;,
If(YEAR(Min_Open_Renewal_Date__c)=YEAR(TODAY()), &quot;Open, Due This Year&quot;,&quot;Open, Due After This Year&quot;)
)
)</formula>
    <label>Renewal Status</label>
    <type>Text</type>
</CustomField>