force-app/main/default/objects/Account/fields/Request_Reassignment__c.field-meta.xml
<CustomField>
    <fullName>Request_Reassignment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Testing field to control reassignment of accounts for Rich. 5/18/2022</description>
    <inlineHelpText>Check this box to have the owner changed to someone else.</inlineHelpText>
    <label>Request Reassignment</label>
    <type>Checkbox</type>
</CustomField>