force-app/main/default/objects/Account/fields/sandbox_refresh__c.field-meta.xml
<CustomField>
    <fullName>sandbox_refresh__c</fullName>
    <label>sandbox refresh</label>
    <length>18</length>
    <type>Text</type>
</CustomField>