force-app/main/default/objects/Account/fields/SDR_Owner__c.field-meta.xml
<CustomField>
    <fullName>SDR_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SDR Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SDR_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>