force-app/main/default/objects/Account/fields/SDR_Owner_is_Logged_In_User__c.field-meta.xml
<CustomField>
    <fullName>SDR_Owner_is_Logged_In_User__c</fullName>
    <description>Field created for reporting purpose.</description>
    <formula>If(  SDR_Owner__r.Id  = $User.Id,&quot;True&quot;,&quot;False&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SDR Owner is Logged In User</label>
    <type>Text</type>
</CustomField>