force-app/main/default/objects/Account/fields/Self_Hosted_Account_License__c.field-meta.xml
<CustomField>
    <fullName>Self_Hosted_Account_License__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Self Hosted Account License</label>
    <referenceTo>Self_Hosted_License__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Account_License</relationshipName>
    <type>Lookup</type>
</CustomField>