force-app/main/default/objects/Account/fields/Self_Hosted_without_License_Connection__c.field-meta.xml
<CustomField>
    <fullName>Self_Hosted_without_License_Connection__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Should be checked if customer is being given a license that does not connect to the server.</description>
    <label>Self Hosted without License Connection</label>
    <type>Checkbox</type>
</CustomField>