force-app/main/default/objects/Account/fields/SF_Customer_Refutation__c.field-meta.xml
<CustomField>
    <fullName>SF_Customer_Refutation__c</fullName>
    <inlineHelpText>Date of the last time the sales team attempted to validate that this account is a Salesforce customer, but instead found that the account is not a Salesforce customer.</inlineHelpText>
    <label>SF Customer Refutation</label>
    <type>Date</type>
</CustomField>