force-app/main/default/objects/Account/fields/SF_Customer_Validation__c.field-meta.xml
<CustomField>
    <fullName>SF_Customer_Validation__c</fullName>
    <description>Field to store date of last time the sales team validated that this account is a Salesforce customer.</description>
    <inlineHelpText>Date of last time the sales team validated that this account is a Salesforce customer.</inlineHelpText>
    <label>SF Customer Validation</label>
    <type>Date</type>
</CustomField>