force-app/main/default/objects/Account/fields/SFDC_Status_Validated_On_Date__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Status_Validated_On_Date__c</fullName>
    <inlineHelpText>Enter the date the account is last validated in SFDC.</inlineHelpText>
    <label>SFDC Status Validated On Date</label>
    <type>Date</type>
</CustomField>