force-app/main/default/objects/Account/fields/SFDC_Validation_Status__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Validation_Status__c</fullName>
    <inlineHelpText>Status helps the need for data enrichment.</inlineHelpText>
    <label>SFDC Validation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SFDC_Validation_Status</valueSetName>
    </valueSet>
</CustomField>