force-app/main/default/objects/Account/fields/Since_Date__c.field-meta.xml
<CustomField>
    <fullName>Since_Date__c</fullName>
    <inlineHelpText>The first start date of an account</inlineHelpText>
    <label>Since Date</label>
    <summarizedField>Opportunity.CloseDate</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.IsWon</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>