force-app/main/default/objects/Account/fields/Solution_Architect__c.field-meta.xml
<CustomField>
    <fullName>Solution_Architect__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Solution Architect</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SolutionArchitectLead</relationshipName>
    <type>Lookup</type>
</CustomField>