force-app/main/default/objects/Account/fields/Subs_Amount__c.field-meta.xml
<CustomField>
    <fullName>Subs_Amount__c</fullName>
    <description>Shows Amount for Subscriptions</description>
    <label>Subs Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>