force-app/main/default/objects/Account/fields/Suggested_Owner_Team__c.field-meta.xml
<CustomField>
    <fullName>Suggested_Owner_Team__c</fullName>
    <formula>If(Customer_Status__c=&apos;Current&apos; || Customer_Status__c=&apos;Late Renewal&apos;, If(TEXT(Region__c)!=&apos;AMER&apos;,TEXT(Region__c),&apos;NA Install East&apos;),
  If( RecordType.Name = &apos;Partner Account&apos; || TEXT(Account_Type__c)=&apos;Partner&apos;, &apos;Partner&apos;,
  If(TEXT(Region__c)!=&apos;AMER&apos;,TEXT(Region__c),&apos;NA New Logo&apos;
)
)
)</formula>
    <label>Suggested Owner Team</label>
    <type>Text</type>
</CustomField>