force-app/main/default/objects/Account/fields/Suggested_Region__c.field-meta.xml
<CustomField>
    <fullName>Suggested_Region__c</fullName>
    <formula>BLANKVALUE(TEXT(Owner.Region__c),TEXT(Customer_Success_Manager__r.Region__c))</formula>
    <label>Suggested Region</label>
    <type>Text</type>
</CustomField>