force-app/main/default/objects/Account/fields/Support_Amount__c.field-meta.xml
<CustomField>
    <fullName>Support_Amount__c</fullName>
    <description>Shows Amount for Support Hrs</description>
    <label>Support Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>