force-app/main/default/objects/Account/fields/Tag__c.field-meta.xml
<CustomField>
    <fullName>Tag__c</fullName>
    <description>Tag for filtering.</description>
    <label>Tag</label>
    <length>40</length>
    <type>Text</type>
</CustomField>