force-app/main/default/objects/Account/fields/Teams_Channel__c.field-meta.xml
<CustomField>
    <fullName>Teams_Channel__c</fullName>
    <formula>IF(Teams_Channel_URL__c &lt;&gt; &quot;&quot;,HYPERLINK( Teams_Channel_URL__c , &quot;Teams&quot; ),&quot;&quot;)</formula>
    <label>Teams Channel</label>
    <type>Text</type>
</CustomField>