force-app/main/default/objects/Account/fields/Teams_Channel_URL__c.field-meta.xml
<CustomField>
    <fullName>Teams_Channel_URL__c</fullName>
    <description>Link to channel for this account in Microsoft Teams</description>
    <label>Teams Channel URL</label>
    <type>Url</type>
</CustomField>