force-app/main/default/objects/Account/fields/Tera__c.field-meta.xml
<CustomField>
    <fullName>Tera__c</fullName>
    <label>Tera</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>rera</fullName>
            </value>
            <value>
                <fullName>dera</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>