force-app/main/default/objects/Account/fields/terminus_mktg__AssociatedAccountsAsOf__c.field-meta.xml
<CustomField>
    <fullName>terminus_mktg__AssociatedAccountsAsOf__c</fullName>
    <label>Associated Accounts - As of</label>
    <type>Date</type>
</CustomField>