force-app/main/default/objects/Account/fields/terminus_mktg__EngagementDataAsOf__c.field-meta.xml
<CustomField>
    <fullName>terminus_mktg__EngagementDataAsOf__c</fullName>
    <label>Engagement Data As Of</label>
    <type>Date</type>
</CustomField>