force-app/main/default/objects/Account/fields/terminus_mktg__EngagingOn__c.field-meta.xml
<CustomField>
    <fullName>terminus_mktg__EngagingOn__c</fullName>
    <label>Engaging On</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Default</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>