force-app/main/default/objects/Account/fields/terminus_mktg__LastAdClickDate__c.field-meta.xml
<CustomField>
    <fullName>terminus_mktg__LastAdClickDate__c</fullName>
    <label>Last Ad Click Date</label>
    <type>Date</type>
</CustomField>