force-app/main/default/objects/Account/fields/terminus_mktg__LastAdImpressionDate__c.field-meta.xml
<CustomField>
    <fullName>terminus_mktg__LastAdImpressionDate__c</fullName>
    <label>Last Ad Impression Date</label>
    <type>Date</type>
</CustomField>