force-app/main/default/objects/Account/fields/terminus_mktg__LastSpike__c.field-meta.xml
<CustomField>
    <fullName>terminus_mktg__LastSpike__c</fullName>
    <label>Last Spike</label>
    <type>Date</type>
</CustomField>