force-app/main/default/objects/Account/fields/terminus_mktg__LastVisitDate__c.field-meta.xml
<CustomField>
    <fullName>terminus_mktg__LastVisitDate__c</fullName>
    <label>Last Visit Date</label>
    <type>Date</type>
</CustomField>