force-app/main/default/objects/Account/fields/terminus_mktg__MostVisitedAwarenessPages__c.field-meta.xml
<CustomField>
    <fullName>terminus_mktg__MostVisitedAwarenessPages__c</fullName>
    <label>Most Visited Awareness Pages</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>