force-app/main/default/objects/Account/fields/terminus_mktg__PeopleOnSiteRolling30__c.field-meta.xml
<CustomField>
    <fullName>terminus_mktg__PeopleOnSiteRolling30__c</fullName>
    <label>People on Site (Rolling 30)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>