force-app/main/default/objects/Account/fields/terminus_mktg__SpikeHeat__c.field-meta.xml
<CustomField>
    <fullName>terminus_mktg__SpikeHeat__c</fullName>
    <formula>IF( ( ISBLANK(terminus_mktg__SpikePercent__c) || terminus_mktg__SpikePercent__c = 0.00 ) , IMAGE(&quot;/resource/terminus_mktg__pepper0&quot;, &quot;0 peppers&quot;, 20, 50),
        IF( terminus_mktg__SpikePercent__c &lt;= 1.00, IMAGE(&quot;/resource/terminus_mktg__pepper1&quot;, &quot;1 pepper&quot;, 20, 50),
        IF( terminus_mktg__SpikePercent__c &lt;=2.50, IMAGE(&quot;/resource/terminus_mktg__pepper2&quot;, &quot;2 peppers&quot;, 20, 50),
        IMAGE(&quot;/resource/terminus_mktg__pepper3&quot;, &quot;3 peppers&quot;, 20, 50))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Spike Heat</label>
    <type>Text</type>
</CustomField>