force-app/main/default/objects/Account/fields/terminus_mktg__SpikePercent__c.field-meta.xml
<CustomField>
    <fullName>terminus_mktg__SpikePercent__c</fullName>
    <label>Spike Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>