force-app/main/default/objects/Account/fields/terminus_mktg__SpikeStart__c.field-meta.xml
<CustomField>
    <fullName>terminus_mktg__SpikeStart__c</fullName>
    <label>Spike Start</label>
    <type>Date</type>
</CustomField>