force-app/main/default/objects/Account/fields/terminus_mktg__TerminusAccountListsAsOf__c.field-meta.xml
<CustomField>
    <fullName>terminus_mktg__TerminusAccountListsAsOf__c</fullName>
    <label>Terminus Account Lists As Of</label>
    <type>DateTime</type>
</CustomField>