force-app/main/default/objects/Account/fields/terminus_mktg__WebVisitDateUpdated__c.field-meta.xml
<CustomField>
    <fullName>terminus_mktg__WebVisitDateUpdated__c</fullName>
    <label>Web Visit Date Updated</label>
    <type>Date</type>
</CustomField>