force-app/main/default/objects/Account/fields/terminus_mktg__WebVisits30DaySnapshot__c.field-meta.xml
<CustomField>
    <fullName>terminus_mktg__WebVisits30DaySnapshot__c</fullName>
    <label>Web Visits (30 Day Snapshot)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>