force-app/main/default/objects/Account/fields/Test__c.field-meta.xml
<CustomField>
    <fullName>Test__c</fullName>
    <label>Test</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>one</fullName>
                <default>true</default>
                <label>one</label>
            </value>
            <value>
                <fullName>three</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>