force-app/main/default/objects/Account/fields/test_commit_and_merge__c.field-meta.xml
<CustomField>
    <fullName>test_commit_and_merge__c</fullName>
    <label>test commit and merge</label>
    <length>10</length>
    <type>Text</type>
</CustomField>