force-app/main/default/objects/Account/fields/Testaccount__c.field-meta.xml
<CustomField>
    <fullName>Testaccount__c</fullName>
    <label>Testaccount</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>