force-app/main/default/objects/Account/fields/testdeploy__c.field-meta.xml
<CustomField>
    <fullName>testdeploy__c</fullName>
    <label>testdeploy</label>
    <length>18</length>
    <type>Text</type>
</CustomField>