force-app/main/default/objects/Account/fields/Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Time_Zone__c</fullName>
    <inlineHelpText>Enter the Time Zone of the client (Ex: EST, PST, IST etc.)</inlineHelpText>
    <label>Time Zone</label>
    <length>50</length>
    <type>Text</type>
</CustomField>