force-app/main/default/objects/Account/fields/Total_of_AR_Subs_Closed_Won__c.field-meta.xml
<CustomField>
    <fullName>Total_of_AR_Subs_Closed_Won__c</fullName>
    <label>Total # of AR Subs (Closed Won)</label>
    <summarizedField>Opportunity.TotalOpportunityQuantity</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>contains</operation>
        <value>Closed Won, Closed Won-Implementation Incomplete</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>