force-app/main/default/objects/Account/fields/Total_Opportunity_Amount_Pipeline__c.field-meta.xml
<CustomField>
    <fullName>Total_Opportunity_Amount_Pipeline__c</fullName>
    <label>Total Opportunity Amount - Pipeline</label>
    <summarizedField>Opportunity.Opportunity_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.IsClosed</field>
        <operation>notEqual</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>