force-app/main/default/objects/Account/fields/Total_Opportunity_Amount_Won__c.field-meta.xml
<CustomField>
    <fullName>Total_Opportunity_Amount_Won__c</fullName>
    <inlineHelpText>Total Opportunity Amount for Closed Won Deals.</inlineHelpText>
    <label>Total Opportunity Amount - Won</label>
    <summarizedField>Opportunity.Opportunity_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.IsWon</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>