force-app/main/default/objects/Account/fields/Total_PO_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_PO_Amount__c</fullName>
    <formula>PS_Amount__c  +   Subs_Amount__c  +  Support_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total PO Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>