force-app/main/default/objects/Account/fields/Total_PS_Hrs__c.field-meta.xml
<CustomField>
    <fullName>Total_PS_Hrs__c</fullName>
    <description>Created to show Total PS Hrs of Account -across multiple Opps.</description>
    <label>Total PS Hrs</label>
    <summarizedField>Opportunity.PS_Hrs__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>notEqual</operation>
        <value>Unresponsive, Closed Lost</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>