force-app/main/default/objects/Account/fields/Toys__c.field-meta.xml
<CustomField>
    <fullName>Toys__c</fullName>
    <label>Toys</label>
    <length>30</length>
    <type>Text</type>
</CustomField>