force-app/main/default/objects/Account/fields/training_required__c.field-meta.xml
<CustomField>
    <fullName>training_required__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Testing modification on field</description>
    <label>training required</label>
    <type>Checkbox</type>
</CustomField>