force-app/main/default/objects/Account/fields/Ultimate_Parent_Id__c.field-meta.xml
<CustomField>
    <fullName>Ultimate_Parent_Id__c</fullName>
    <formula>IF(NOT(ISBLANK(Parent.Parent.Parent.Parent.Parent.Id)), Parent.Parent.Parent.Parent.Parent.Id,
IF(NOT(ISBLANK(Parent.Parent.Parent.Parent.Id)), Parent.Parent.Parent.Parent.Id,
IF(NOT(ISBLANK(Parent.Parent.Parent.Id)), Parent.Parent.Parent.Id,
IF(NOT(ISBLANK(Parent.Parent.Id)), Parent.Parent.Id,
Parent.Id))))</formula>
    <label>Ultimate Parent Id</label>
    <type>Text</type>
</CustomField>