force-app/main/default/objects/Account/fields/UniqueIdentifier__c.field-meta.xml
<CustomField>
    <fullName>UniqueIdentifier__c</fullName>
    <label>UniqueIdentifier</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>