force-app/main/default/objects/Account/fields/Visitor_ID__c.field-meta.xml
<CustomField>
    <fullName>Visitor_ID__c</fullName>
    <inlineHelpText>Visitor ID from Pendo</inlineHelpText>
    <label>Visitor ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>