force-app/main/default/objects/Account/fields/Yash_CustomField__c.field-meta.xml
<CustomField>
    <fullName>Yash_CustomField__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is a custom field created for the training purpose.</description>
    <label>Yash CustomField</label>
    <type>Checkbox</type>
</CustomField>