force-app/main/default/objects/Account/fields/zub_training_req__c.field-meta.xml
<CustomField>
    <fullName>zub_training_req__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Test the changes for the filed</description>
    <label>zub training req</label>
    <type>Checkbox</type>
</CustomField>