force-app/main/default/objects/Account/recordTypes/General_Account.recordType-meta.xml
<RecordType>
    <fullName>General_Account</fullName>
    <active>true</active>
    <label>General Account</label>
</RecordType>