force-app/main/default/objects/Account/recordTypes/Pavantest.recordType-meta.xml
<RecordType>
    <fullName>Pavantest</fullName>
    <active>true</active>
    <label>Pavantest</label>
</RecordType>