force-app/main/default/objects/Account/validationRules/Mandate_Other_Integration.validationRule-meta.xml
<ValidationRule>
    <fullName>Mandate_Other_Integration</fullName>
    <active>false</active>
    <description>Mandate Other Integration when &apos;Other&apos; is chosen for &apos;Integration&apos;.</description>
    <errorConditionFormula>ISPICKVAL( Integration__c , &apos;Other&apos;) &amp;&amp;
ISBLANK( Other_Integration__c )</errorConditionFormula>
    <errorDisplayField>Integration__c</errorDisplayField>
    <errorMessage>Please enter the name of the integration when &apos;Other&apos; is chosen for &apos;Integration&apos;.</errorMessage>
</ValidationRule>