force-app/main/default/objects/Account/listViews/ABM_Accounts_to_Assign_Campaign.listView-meta.xml
<ListView>
    <fullName>ABM_Accounts_to_Assign_Campaign</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>ABM_Tier__c</columns>
    <columns>SDR_Owner__c</columns>
    <columns>ACCOUNT.URL</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ABM_Tier__c</field>
        <operation>equals</operation>
        <value>G10,1,2</value>
    </filters>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.General_Account</value>
    </filters>
    <label>ABM Accounts to Assign Campaign</label>
    <sharedTo>
        <role>VP_of_Strategic_Marketing</role>
    </sharedTo>
</ListView>