force-app/main/default/objects/Account/listViews/ABM_Campaign_1_Accounts.listView-meta.xml
<ListView>
    <fullName>ABM_Campaign_1_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>AccountID__c</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>Account_Type__c</columns>
    <columns>Account_Sub_Type__c</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>SDR_Owner__c</columns>
    <filterScope>Everything</filterScope>
    <label>ABM Campaign 1 Accounts</label>
    <language>en_US</language>
    <sharedTo>
        <role>Digital_Marketing</role>
        <role>VP_of_Strategic_Marketing</role>
    </sharedTo>
</ListView>