force-app/main/default/objects/Account/listViews/Accounts_with_Inactive_Owner.listView-meta.xml
<ListView>
    <fullName>Accounts_with_Inactive_Owner</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT_SOURCE</columns>
    <columns>Account_Type__c</columns>
    <columns>ACCOUNT.ADDRESS1_COUNTRY_CODE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account_Owner_Status__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Accounts with Inactive Owner</label>
</ListView>