force-app/main/default/objects/Account/listViews/Merge_Accounts.listView-meta.xml
<ListView>
    <fullName>Merge_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>Account_Type__c</columns>
    <columns>ACCOUNT_SOURCE</columns>
    <columns>ACCOUNT.INDUSTRY</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>SDR_Owner__c</columns>
    <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
    <columns>ACCOUNT.ADDRESS1_COUNTRY_CODE</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Duplicate_Account__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>#Accounts To Merge</label>
    <sharedTo>
        <group>Market_Analysts_Group</group>
        <group>Queue_Manager</group>
    </sharedTo>
</ListView>